# world-simulation

./: .gitignore  CODE_REVIEW.md  README.md  colony_history.txt  pyproject.toml
docs/: detail_panel_layout.md  detail_panel_layout_verification.md
src/world_simulation/: __init__.py
src/world_simulation/entities/: __init__.py  animal.py  generative_ai.py  name_generator.py  neural_network.py  npc.py
src/world_simulation/genetics/: __init__.py  evolution.py
src/world_simulation/history/: __init__.py  historian.py
src/world_simulation/houses/: __init__.py  house.py
src/world_simulation/rendering/: __init__.py  camera.py  detail_panel.py  fog_manager.py  historian_log_viewer.py  neural_network_viz.py  performance_profiler.py  renderer.py  sky_manager.py  vegetation_instancer.py
src/world_simulation/trees/: __init__.py  tree.py
src/world_simulation/world/: __init__.py  generator.py  vegetation.py  world.py
tests/: conftest.py  test_animals.py  test_camera_terrain_collision.py  test_evolution.py  test_fog_and_rendering.py  test_fog_rendering_integration.py  test_generative_ai.py  test_historian.py  test_house.py  test_house_door.py  test_integration.py  test_name_generation.py  test_neural_network.py  test_night_exposure.py  test_npc.py  test_npc_selection.py  test_renderer_colors.py  test_renderer_crash_fixes.py  test_rendering.py  test_reproduction_aging.py  test_terrain_gap_fixes.py  test_terrain_generation.py  test_terrain_smoothing.py  test_tree.py  test_vegetation_instancing.py  test_window_resizing.py  test_world.py  test_world_generator.py
